# Modernfessor

./: README.md  pyproject.toml
src/modernfessor/baseline/: segmentation.py  vocabulariser.py
